# aerium

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  codecov.yml  go.mod
.github/: CODEOWNERS  release-draft-template.yml
.github/packager/rust/grpc/: Cargo.toml  README.md
.github/packager/rust/grpc/src/: lib.rs
.github/packager/rust/jsonrpc/: Cargo.toml  README.md
.github/packager/rust/jsonrpc/src/: lib.rs
cmd/: cmd.go  cmd_test.go  importer.go
committee/: committee.go  committee_test.go  interface.go
config/: bootstrap.json  config.go  config_test.go  example_config.toml
consensus/: commit.go  config.go  config_test.go  consensus.go  consensus_test.go  cp.go  cp_decide.go  cp_mainvote.go  cp_prevote.go  cp_test.go  errors.go  height.go  height_test.go  interface.go  mediator.go  mock.go  precommit.go  precommit_test.go  propose.go  propose_test.go  state.go
crypto/: address.go  address_test.go  crypto.go
docs/: bootstrap.md  gtk-gui-development.md  install.md  metrics.md  patching.md  releasing.md  update-dependencies.md
execution/: errors.go  execution.go  execution_test.go
genesis/: genesis.go  genesis_params.go  genesis_test.go  mainnet.json  testnet.json
network/: config.go  dht.go  gater.go  gater_test.go  gossip.go  mdns.go  mdns_test.go  mock.go  network.go  network_test.go  notifee.go  peermgr.go  peermgr_test.go  stream.go  stream_test.go  utils.go  utils_test.go
node/: node.go  node_test.go
sandbox/: interface.go  mock.go  sandbox.go  sandbox_test.go
scripts/: generate_network_key.py  snapshot.py
sortition/: seed.go  seed_test.go  sortition.go  sortition_test.go  vrf.go  (+1 more)
(+366 files in other folders)
