[package]
name = "aerium-grpc"
version = "{{ VERSION }}"
edition = "2021"
description = "Rust client for interacting with the Aerium blockchain via gRPC"
authors = ["Aerium Development Team <info@aerium.network>"]
license = "MIT"
homepage = "https://aerium.network"
repository = "https://github.com/aerium-network/aerium"
keywords = ["aerium", "blockchain", "grpc"]

[dependencies]
tonic = { version = "0.12", default-features = false, features = ["transport", "codegen", "prost"] }
prost = { version = "0.13", default-features = false, features = ["derive", "std"] }
serde = { version = "1.0", default-features = false, features = [] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
async-trait = { version = "0.1", default-features = false, features = [] }
pbjson = { version = "0.8", default-features = false, features = [] }

