[package]
name = "aerium-jsonrpc"
version = "{{ VERSION }}"
edition = "2021"
description = "Rust client for interacting with the Aerium blockchain via JSON-RPC"
authors = ["Aerium Development Team <info@aerium.network>"]
license = "MIT"
homepage = "https://aerium.network"
repository = "https://github.com/aerium-network/aerium"
keywords = ["aerium", "blockchain", "json-rpc"]

[dependencies]
jsonrpsee = { version = "0.26", features = ["http-client"] }
serde = { version = "1.0", default-features = false, features = [ "derive" ] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
derive_builder = { version = "0.20" }
